--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ui.operators.SimpleOperatorActivity" />
         <activity android:name=".ui.operators.MapOperatorActivity" />
         <activity android:name=".ui.operators.ZipOperatorActivity" />
+        <activity android:name=".ui.operators.DisposableOperatorActivity" />
     </application>
 
 </manifest>
