Added FlatMap operator

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".ui.operators.DisposableOperatorActivity" />
         <activity android:name=".ui.operators.TakeOperatorActivity" />
         <activity android:name=".ui.operators.TimerOperatorActivity" />
+        <activity android:name=".ui.operators.FlatMapOperatorActivity" />
     </application>
 
 </manifest>
