--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".ui.operators.TakeOperatorActivity" />
         <activity android:name=".ui.operators.TimerOperatorActivity" />
         <activity android:name=".ui.operators.FlatMapOperatorActivity" />
+        <activity android:name=".ui.operators.IntervalOperatorActivity" />
     </application>
 
 </manifest>
