--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.operators.TimerOperatorActivity" />
         <activity android:name=".ui.operators.FlatMapOperatorActivity" />
         <activity android:name=".ui.operators.IntervalOperatorActivity" />
+        <activity android:name=".ui.operators.DebounceOperatorActivity" />
     </application>
 
 </manifest>
