--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.operators.FlatMapOperatorActivity" />
         <activity android:name=".ui.operators.IntervalOperatorActivity" />
         <activity android:name=".ui.operators.DebounceOperatorActivity" />
+        <activity android:name=".ui.operators.SingleObserverOperatorActivity" />
     </application>
 
 </manifest>
