--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.operators.DebounceOperatorActivity" />
         <activity android:name=".ui.operators.SingleObserverOperatorActivity" />
         <activity android:name=".ui.operators.CompletableObserverOperatorActivity" />
+        <activity android:name=".ui.operators.FlowableOperatorActivity" />
     </application>
 
 </manifest>
