--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Dec 20 12:29:05 SGT 2017
+#Thu Jan 25 14:58:09 SGT 2018
+systemProp.http.proxyPassword=
 systemProp.http.proxyHost=intproxy.maybank.com
 org.gradle.jvmargs=-Xmx1536m
+systemProp.http.proxyUser=J6673234
 systemProp.http.proxyPort=80
