--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         <activity android:name=".ui.operators.ThrottleFirstOperatorActivity" />
         <activity android:name=".ui.operators.ThrottleLastOperatorActivity" />
         <activity android:name=".ui.operators.WindowOperatorActivity" />
+        <activity android:name=".ui.operators.DelayOperatorActivity" />
     </application>
 
 </manifest>
