--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,7 @@
         <activity android:name=".ui.operators.creatingOperators.CreateOperatorActivity" />
         <activity android:name=".ui.operators.conditionalOperators.AmbOperatorActivity" />
         <activity android:name=".ui.operators.RepeatWhenOperator" />
+        <activity android:name=".ui.operators.combiningOperators.ConcatOperatorActivity" />
     </application>
 
 </manifest>
