--- a/PaginationAndLazyLoading/build.gradle
+++ b/PaginationAndLazyLoading/build.gradle
@@ -34,4 +34,7 @@ dependencies {
 
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+
+    implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
 }
