--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Jan 25 14:58:09 SGT 2018
-systemProp.http.proxyPassword=
-systemProp.http.proxyHost=intproxy.maybank.com
+#systemProp.http.proxyPassword=
+#systemProp.http.proxyHost=intproxy.maybank.com
 org.gradle.jvmargs=-Xmx1536m
-systemProp.http.proxyUser=J6673234
-systemProp.http.proxyPort=80
+#systemProp.http.proxyUser=J6673234
+#systemProp.http.proxyPort=80
